Standardize website structure with header, main, footer, and aside

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,19 +6,31 @@
     <title>My Tweets Page</title>
 </head>
 <body>
-    <h1>My Tweets Page</h1>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-    <p>Check out this tweet:</p>
+    <main>
+        <article>
+            <h1>My Tweets Page</h1>
+            <p>Check out this tweet:</p>
+            <blockquote class="twitter-tweet">
+                <p lang="en" dir="ltr">Just setting up my Twitter. #myfirsttweet</p>&mdash; Twitter (@Twitter)
+                <a href="https://twitter.com/Twitter/status/20">March 21, 2006</a>
+            </blockquote>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </article>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
 
-    <!-- Embedded tweet example -->
-    <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">Just setting up my Twitter. #myfirsttweet</p>&mdash; Twitter (@Twitter) 
-        <a href="https://twitter.com/Twitter/status/20">March 21, 2006</a>
-    </blockquote>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-    <p>
-        <a href="index.html">Go back to Homepage</a>
-    </p>
+    <footer>
+        <p>Made by Emnet - <a href="https://emnetdamte.com" target="_blank">here</a></p>
+    </footer>
 </body>
+
 </html>
