--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,3 +1,32 @@
-<p>
-    <a href="tweets.html">See my Tweets page</a>
-</p>
+<body>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
+
+    <main>
+        <article>
+            <h1>Welcome to My Cool First Webpage</h1>
+            <h2>About Me</h2>
+            <p>This is my first paragraph about me.</p>
+            <p>This is my second paragraph about my interests.</p>
+            <h3>My Hobbies</h3>
+            <p>This is the third paragraph describing my hobbies.</p>
+            <p>This is the fourth paragraph about what I like to do in my free time.</p>
+            <p>
+                <a href="https://www.alxafrica.com" target="_blank">
+                    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
+                </a>
+            </p>
+        </article>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+
+    <footer>
+        <p>Made by Emnet - <a href="https://emnetdamte.com" target="_blank">here</a></p>
+    </footer>
+</body>
