--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,32 +1,75 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My First Portfolio</title>
+</head>
 <body>
-    <header>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="tweets.html">Tweets</a></li>
-        </ul>
-    </header>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-    <main>
-        <article>
-            <h1>Welcome to My Cool First Webpage</h1>
-            <h2>About Me</h2>
-            <p>This is my first paragraph about me.</p>
-            <p>This is my second paragraph about my interests.</p>
-            <h3>My Hobbies</h3>
-            <p>This is the third paragraph describing my hobbies.</p>
-            <p>This is the fourth paragraph about what I like to do in my free time.</p>
-            <p>
-                <a href="https://www.alxafrica.com" target="_blank">
-                    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
-                </a>
-            </p>
-        </article>
-        <aside>
-            <p>placeholder to add comment thread later</p>
-        </aside>
-    </main>
+  <main>
+    <article>
+      <h1>Welcome to My Cool First Webpage</h1>
+      <h2>About Me</h2>
+      <p>This is my first paragraph about me.</p>
+      <p>This is my second paragraph about my interests.</p>
+      <h3>My Hobbies</h3>
+      <p>This is the third paragraph describing my hobbies.</p>
+      <p>This is the fourth paragraph about what I like to do in my free time.</p>
+      <p>
+        <a href="https://www.alxafrica.com" target="_blank">
+          <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
+        </a>
+      </p>
 
-    <footer>
-        <p>Made by Emnet - <a href="https://emnetdamte.com" target="_blank">here</a></p>
-    </footer>
+      <!-- Container for the table of learners -->
+      <h2>Learn about some learners</h2>
+      <table border="1">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Country</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>John</td>
+            <td>25</td>
+            <td>USA</td>
+          </tr>
+          <tr>
+            <td>Emily</td>
+            <td>28</td>
+            <td>Canada</td>
+          </tr>
+          <tr>
+            <td>Michael</td>
+            <td>32</td>
+            <td>Australia</td>
+          </tr>
+          <tr>
+            <td>Sophia</td>
+            <td>21</td>
+            <td>UK</td>
+          </tr>
+        </tbody>
+      </table>
+
+    </article>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by Emnet - <a href="https://github.com" target="_blank">here</a></p>
+  </footer>
 </body>
+</html>
