--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -28,7 +28,7 @@
         </a>
       </p>
 
-      <!-- Container for the table of learners -->
+      <!-- Table of learners -->
       <h2>Learn about some learners</h2>
       <table border="1">
         <thead>
@@ -39,26 +39,10 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>John</td>
-            <td>25</td>
-            <td>USA</td>
-          </tr>
-          <tr>
-            <td>Emily</td>
-            <td>28</td>
-            <td>Canada</td>
-          </tr>
-          <tr>
-            <td>Michael</td>
-            <td>32</td>
-            <td>Australia</td>
-          </tr>
-          <tr>
-            <td>Sophia</td>
-            <td>21</td>
-            <td>UK</td>
-          </tr>
+          <tr><td>John</td><td>25</td><td>USA</td></tr>
+          <tr><td>Emily</td><td>28</td><td>Canada</td></tr>
+          <tr><td>Michael</td><td>32</td><td>Australia</td></tr>
+          <tr><td>Sophia</td><td>21</td><td>UK</td></tr>
         </tbody>
       </table>
 
